# hyperdog.AI-microROS-workspace

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  hyperdog_ai-uros-controller-stm32f4.ioc  initLegMotorsMsg_config.cpp
.temp/: minicheetah_motor.h  uros_tasks.c  uros_tasks.h
.temp/new_microros_include/rmw_microxrcedds_c/: config.h
App/Inc/: error_indicator.h  minicheetah_motor.h  motor_defs.h  motor_typedefs.h  uros_tasks.h
App/Src/: error_indicator.c  minicheetah_motor.c  minicheetah_motor.cpp  uros_tasks.c  uros_tasks.cpp
Core/Inc/: can.h  main.h  stm32f4xx_it.h
Core/Src/: can.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  usb_otg.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h  stm32f4xx_hal_can.h  stm32f4xx_hal_cec.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_crc.h  stm32f4xx_hal_cryp.h  stm32f4xx_hal_cryp_ex.h  stm32f4xx_hal_dac.h  stm32f4xx_hal_dcmi.h  stm32f4xx_hal_dfsdm.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dsi.h  stm32f4xx_hal_eth.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_fmpi2c.h  (+34 more)
firmware-stm32f407-micro-ros/: .mxproject  Makefile  README.md  STM32-for-VSCode.config.yaml  gcc-arm-none-eabi.cmake  startup_stm32f407xx.s
firmware-stm32f407-micro-ros/build_firmware/: hyperdog_ai-uros-controller-stm32f4.elf  hyperdog_ai-uros-controller-stm32f4.hex  hyperdog_ai-uros-controller-stm32f4.map
firmware-stm32f407-micro-ros/test/: 2darray.c  a.out  bittest.c  err_handle.c  float.c  str.c  test.c
other_files/: Makefile
src/hyperdog_ctrl_legs/: CMakeLists.txt  package.xml
src/hyperdog_ctrl_legs/config/: initLegMotors_params.yaml
src/hyperdog_ctrl_legs/include/hyperdog_ctrl_legs/: initLegMotorsMsg_config.hpp
src/hyperdog_ctrl_legs/src/: disable_all_motors_client.cpp  enable_all_motors_client.cpp  initLegMotorsMsg_config.cpp  init_leg_motors_client.cpp  set_motor_zero_position_client.cpp
src/hyperdog_uros_clients/: CMakeLists.txt  package.xml
src/hyperdog_uros_interfaces/: CMakeLists.txt
src/hyperdog_uros_interfaces/msg/: LegCmd.msg  LegStates.msg  LegsStates.msg  MotorCmd.msg  MotorCmdEncoded.msg  MotorCtrlLimits.msg  MotorFeedbackEncoded.msg  MotorStatesEncoded.msg  MotorsCmdEncoded.msg  MotorsStatesEncoded.msg
src/hyperdog_uros_interfaces/srv/: EnableAllMotors.srv  SetLegDamping.srv  SetMotorCmdFrequency.srv  SetMotorIff.srv  SetWatchdogFequency.srv
src/hyperdog_uros_msgs/: CMakeLists.txt  package.xml
src/hyperdog_uros_msgs/include/hyperdog_uros_msgs/msg/: leg_cmd.h  leg_states.h  motor_cmd.h  motor_feedback.h  motor_states.h  motors_states.h  rosidl_typesupport_microxrcedds_c__visibility_control.h
src/hyperdog_uros_msgs/include/hyperdog_uros_msgs/msg/detail/: init_leg_motors__rosidl_typesupport_microxrcedds_c.h  init_leg_motors__struct.h  init_leg_motors__type_support.h  init_motor__rosidl_typesupport_microxrcedds_c.h  leg_states__functions.c  leg_states__struct.h  legs_cmd__functions.c  legs_cmd__functions.h  legs_cmd__type_support.h  legs_states__functions.c  limit__struct.h  limit__type_support.h  motor_cmd2__functions.c  motor_cmd2__struct.h  motor_ctrl_limits__functions.c  motor_params__functions.c  motor_params__struct.h  motor_states__functions.h  vector3__functions.h  vector3__struct.h  vector3__type_support.h
src/hyperdog_uros_msgs/include/hyperdog_uros_msgs/srv/: set_leg_damping.h  set_leg_stiffness.h  set_zero_position.h
src/hyperdog_uros_msgs/include/hyperdog_uros_msgs/srv/detail/: disable_motor2__rosidl_typesupport_microxrcedds_c.h  disable_motor2__struct.h  disable_motor__functions.c  disable_motor__functions.h  disable_motor__struct.h  disable_motor__type_support.h  enable_all_motors__functions.h  enable_motor__functions.c  enable_motor__functions.h  enable_motor__rosidl_typesupport_microxrcedds_c.h  enable_motor__struct.h  init_leg_motors__rosidl_typesupport_microxrcedds_c.h  init_leg_motors__struct.h  init_motor__functions.c  init_motor__functions.h  init_motor__struct.h  init_motor__type_support.h  set_leg_damping__struct.h  set_leg_stiffness__functions.h  set_leg_stiffness__rosidl_typesupport_microxrcedds_c.h  set_leg_stiffness__type_support.h  set_motor_cmd_frequency__struct.h  set_motor_cmd_frequency__type_support.h  set_motor_iff__functions.c  set_watchdog_fequency__functions.h  set_watchdog_fequency__struct.h  set_zero_position2__functions.c  set_zero_position__functions.c  set_zero_position__rosidl_typesupport_microxrcedds_c.h
src/hyperdog_uros_msgs/msg/: InitMotor.msg  LegStates.msg  LegsStates.msg  Limit.msg  MotorCtrlLimits.msg  MotorFeedback.msg  MotorParams.msg  MotorStates.msg
src/hyperdog_uros_msgs/share/hyperdog_uros_msgs/: package.dsv  package.sh  package.zsh
src/hyperdog_uros_msgs/share/hyperdog_uros_msgs/cmake/: hyperdog_uros_msgs__rosidl_typesupport_cExport-debug.cmake  rosidl_cmake-extras.cmake
src/hyperdog_uros_msgs/share/hyperdog_uros_msgs/msg/: InitMotor.idl  LegCmd.msg  LegsCmd.idl  Limit.idl  MotorCmd.idl  MotorCmd2.idl  MotorCtrlLimits.idl  MotorStates.idl
src/hyperdog_uros_msgs/share/hyperdog_uros_msgs/srv/: DisableAllMotors.idl  DisableAllMotors_Request.msg  DisableMotor.idl  EnableMotor2.srv  InitLegMotors.idl  InitLegMotors_Request.msg  InitMotor.idl  InitMotor.srv  SetLegDamping.srv  SetLegStiffness_Request.msg  SetZeroPosition2.srv  SetZeroPosition2_Response.msg
src/hyperdog_uros_msgs/srv/: DisableAllMotors.srv  DisableMotor2.srv  EnableAllMotor.srv  EnableAllMotors.srv  SetLegDamping.srv  SetLegStiffness.srv  SetMotorCmdFrequency.srv  SetMotorIff.srv  SetMotorsControlLimits.srv  SetZeroPosition.srv
src/motor_states_decoder/: CMakeLists.txt  package.xml
src/motor_states_decoder/include/: print_color.h
src/motor_states_decoder/include/motor_states_decoder/: minicheetah_motor_utils.hpp  motor_states_decoder_node.hpp
src/motor_states_decoder/src/: minicheetah_motor_utils.cpp  motor_states_decoder_node.cpp
temp_files/: temp_makefile
temp_files/for_isr_lab_pc/: c_cpp_properties.json
temp_files/for_my_laptop/: c_cpp_properties.json  launch.json
test/: a.out  bittest.c  enums.c
(+917 files in other folders)
